--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^6.2.0",
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "nodemon": "^1.18.9"
   },
   "eslintConfig": {
