--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "base-node-api",
   "version": "0.1.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
-    "dev": "nodemon app.js",
-    "start": "node app.js",
+    "dev": "nodemon src/app.js",
+    "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -20,6 +20,7 @@
     "eslint-plugin-import": "^2.16.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
+    "mongoose": "^5.4.8",
     "nodemon": "^1.18.9"
   },
   "eslintConfig": {
