--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "dev": "NODE_ENV=DEV nodemon src/app.js",
-    "start": "node src/app.js",
+    "dev": "NODE_ENV=DEV nodemon dist/app.js",
+    "start": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/lodash": "^4.14.120",
     "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
@@ -31,5 +32,10 @@
       "no-underscore-dangle": "off",
       "no-console": "off"
     }
+  },
+  "devDependencies": {
+    "@types/dotenv": "^6.1.0",
+    "@types/express": "^4.16.1",
+    "@types/mongoose": "^5.3.12"
   }
 }
