--- a/package.json
+++ b/package.json
@@ -5,37 +5,54 @@
   "main": "src/app.js",
   "scripts": {
     "dev": "NODE_ENV=DEV nodemon dist/app.js",
+    "tsc": "tsc",
     "start": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/lodash": "^4.14.120",
     "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.2.0",
-    "eslint": "^5.12.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.16.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.4.8",
-    "morgan": "^1.9.1",
-    "nodemon": "^1.18.9"
+    "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.1",
+    "@types/dotenv": "^6.1.0",
+    "@types/express": "^4.16.1",
+    "@types/jsonwebtoken": "^8.3.0",
+    "@types/lodash": "^4.14.120",
+    "@types/mongoose": "^5.3.12",
+    "@types/morgan": "^1.7.35",
+    "@typescript-eslint/eslint-plugin": "^1.2.0",
+    "@typescript-eslint/parser": "^1.2.0",
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "nodemon": "^1.18.9",
+    "typescript": "^3.3.1"
   },
   "eslintConfig": {
-    "extends": "airbnb-base",
+    "extends": [
+      "airbnb-base",
+      "prettier",
+      "prettier/@typescript-eslint"
+    ],
     "rules": {
       "no-underscore-dangle": "off",
       "no-console": "off"
-    }
-  },
-  "devDependencies": {
-    "@types/dotenv": "^6.1.0",
-    "@types/express": "^4.16.1",
-    "@types/mongoose": "^5.3.12"
+    },
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+      "@typescript-eslint"
+    ]
   }
 }
