--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "base-node-api",
   "version": "0.1.0",
   "description": "",
-  "main": "src/app.js",
+  "main": "dist/app.js",
   "scripts": {
     "dev": "NODE_ENV=DEV nodemon dist/app.js",
     "tsc": "tsc",
