removed main entry from pkg

--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "base-node-api",
   "version": "0.1.0",
   "description": "",
-  "main": "dist/app.js",
   "engines": {
-    "node": "10.14.1",
-    "npm": "6.x"
+    "node": "10.14.1"
   },
   "scripts": {
     "dev": "NODE_ENV=DEV nodemon dist/app.js",
