--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "NODE_ENV=DEV nodemon dist/app.js",
     "tsc": "tsc",
-    "start": "node dist/app.js",
+    "start": "echo \"WHUUUUUUUUU\n\nWHUUUUUUUUU\n\nWHUUUUUUUUU\"",
+    // "start": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
