--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "NODE_ENV=DEV nodemon dist/app.js",
     "tsc": "tsc",
     "start": "echo \"WHUUUUUUUUU\n\nWHUUUUUUUUU\n\nWHUUUUUUUUU\"",
-    // "start": "node dist/app.js",
+    "start2": "node ./dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
